worked some more with bootstrap. added different 404 messages.

--- a/mysite/templates/sample.html
+++ b/mysite/templates/sample.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>calvin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -30,12 +30,10 @@
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
           <a class="brand" href="/">calvin</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="/">Home</a></li>
               <li><a href="/about">About</a></li>
               <li><a href="/contact">Contact</a></li>
             </ul>
@@ -45,18 +43,19 @@
     </div>
 
     <div class="container">
-
-      <h1>Welcome to my latest project!</h1>
-      <p>Check out this neato website I built using the Flask framework with Jinja2 templates! This blank canvas will one day be.. well, less blank.</p>
-
+      <div class="row">
+        <div class="span3">
+          <h1>Welcome to my latest project!</h1>
+        </div>
+        <div class="span9">
+          <br>
+          <br>
+          <p>
+            Check out this neato website I built using the Flask framework with Jinja2 templates!<br>This blank canvas will one day be.. well, less blank.
+          </p>
+        </div>
+    </div>
     </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" ></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.3/jquery.min.js" ></script>
-    <script src="{{url_for('static', filename='assets/js/bootstrap.js')}}"></script>
 
   </body>
 </html>
