--- a/mysite/templates/404.html
+++ b/mysite/templates/404.html
@@ -4,16 +4,28 @@
     <style type="text/css">
         h1 {font-family:helvetica; font-color:#355333;}
         p {font-family:helvetica; font-color:#355333;}
+        div.span1 {font-style:bold; font-size:20px;}
+        a {font-color:yellow;}
     </style>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>4[Uh Oh!]4</title>
+    <link href="{{url_for('static', filename='assets/css/bootstrap.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='assets/css/bootstrap-responsive.css')}}" rel="stylesheet">
 </head>
 <body>
-    <h1>I.<br>Am so.<br>Sorry.</h1>
-    <p>I haven't developed this page yet!
-    </p>
-    <p>
-        For now, you'll just have to click the back button or <a href="/">here</a>
-    </p>
+    <div class="container">
+        <div class="row">
+            <div class ="span2">
+                <h1>I.<br>Am so.<br>Sorry.</h1>
+            </div>
+            <div class="span10">
+                <br>
+                <br>
+                <p>
+                    {{ error_message | safe }} 
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
