--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">calvin</a>
+        <a class="brand" href="/">calvin</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li class={%block home_nav%}{%endblock%}><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
@@ -36,7 +36,7 @@
     </div><!-- /.navbar-inner -->
   </div><!-- /.navbar -->
   <div id='content'>
-    <div class='span6 offset2 main'>
+    <div class='span8 offset2 main'>
       <div class='message'>
         {% block title %}{% endblock %}
         {% block content %}{% endblock %}
