--- a/mysite/static/custom/custom.css
+++ b/mysite/static/custom/custom.css
@@ -1,50 +1,49 @@
-/* primary title on top portion of navbar */
-.primary_title {
-  /* TODO: add a super sick font */
-  font-family: helvetica;
-  color: white;
-  background-color: rgb(0, 91, 163);
-  text-align: left;
-  letter-spacing: .3em;
-  text-transform: uppercase;
-  margin: 0;
-  border-bottom: 2px solid rgb(98, 136, 192);
-}
-
 /* General navbar-inner (part with buttons) */
 .navbar-inner {
-  background-color: rgb(0, 91, 163);
-  border-top: 10px solid white;
+  padding-left: 1em;
+    /* colorzilla generated gradient */
+background: #48b500; /* Old browsers */
+background: -moz-linear-gradient(top, #48b500 0%, #006e2e 39%, #114900 86%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#48b500), color-stop(39%,#006e2e), color-stop(86%,#114900)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* IE10+ */
+background: linear-gradient(to bottom, #48b500 0%,#006e2e 39%,#114900 86%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#48b500', endColorstr='#114900',GradientType=0 ); /* IE6-9 */
 }
 
 /* standard navbar button*/
 .navbar .nav > li > a {
     color: rgb(255, 255, 255);
     text-shadow: none;
-    border-right: 2px solid rgb(98, 136, 192);
+    border-right: 1px solid rgb(107, 158, 113);
 }
 
 /* Active navbar button */
 .navbar .nav > .active > a{
     color: white;
-    background-color: rgb(30, 121, 193);
+    background-color: rgb(65, 167, 56);
     text-shadow: none;
 }
 
 /* navbar hover */
 .navbar .nav > :hover {
-    color: #555555;
-    background-color: #e5e5e5
+    color: white;
+    background-color: rgb(65, 167, 56)
+}
+
+/* navbar active hover */
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover {
+    color: white;
+    background-color: rgb(65, 167, 56)
 }
 
 /* brand */
 .navbar .brand {
-    padding-left: 1em;
-    padding-right: 2em;
     color: rgb(255, 255, 255);
     text-shadow: none;
     letter-spacing: .2em;
-    border-right: 2px solid rgb(98, 136, 192);
+    border-right: 1px solid rgb(107, 158, 113);
 }
 
 /* Formatting for nav button text */
@@ -53,61 +52,41 @@
   text-transform: lowercase;
 }
 
-/* CSS for active navbar button */
-.active {
-  font-size: 130%;
-  letter-spacing: .3em;
-  text-transform: uppercase;
-}
-
 /*  Pads body below fixed top navbar; sets text color */
 body {
-    padding-top: 150px;
-    color: white;
+    padding-top: 100px;
+    color: rgb(0, 31, 0);
+    background-color: rgb(193, 247, 208);
 }
 
 /*  Aligns page titles */
 h2 {
     text-align: center;
     font-size: 135%;
+    font-family: Sintony;
 }
 
 /* Background image for the message text; need to find something better. */
-.span8 {
-    background: url("tweed.png");
-    font-size: 150%;
+.main {
+    background: url("kindajean.png");
+    opacity: 0.9;
+    font-size: 125%;
     line-height: 1.2em;
     overflow: scroll;
     padding-bottom: 1.2em;
     padding-left: 2em;
     padding-right: 2em;
-    border-radius: 8px;
+    border-radius: 30px;
 }
 
 /* Increase spacing between paragraphs */
 .message > p {
     margin-bottom: 1em;
+    font-family: Oxygen;
 }
 
-/* Format message padding */
-/*.message {
-    padding-left: 2em;
-    padding-right: 2em;
-}*/
-
-/* Hidden spoiler messages */
-.spoiler {
-    visibility: hidden;
-    display: inline;
-}
-
-/*
-Currently  not working: I want the spoiler message to
-appear if the user hovers over the text.
-*/
-.spoiler:hover {
-    visibility: visible;
-    color: #005580;
+.main a {
+  color: rgb(0, 0, 255);
 }
 
 
