--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -9,22 +9,20 @@
 {% endblock %}
 
 {% block title %}
-    <h2>About me</h2>
+    <h2> About me </h2>
 {% endblock %}
 
 {% block content %}
-<!-- TODO : would like to increase the spacing between paragraphs -->
+    <h3>About me</h3>
     <p>
         As you may have already guessed, I'm Calvin Belden: student, son, brother, friend, acquaintance, innovator, loyal confidant, and (to some) arch nemesis.
     </p>
     <p>
         Officially, I am a senior Electrical Engineering student at the University of Notre Dame.  I've picked up
-        various Computer Science skills via coursework, internships, and personal investigation.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a>.
+        various Computer Science skills via coursework, internships, and personal investigation.  Along my travels I've picked up Python, C#, C, Ruby, and (briefly) C++.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a>.
     </p>
     <p>
         When I'm not working, studying, reading, or tinkering, you can find me out on the golf course shanking golf
         balls into beverage carts.  I also enjoy swimming, frequenting the local movie theater, and magnets.
     </p>
 {% endblock %}
-
-<!-- TODO add sidebar for sidenotes! -->
