--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -6,11 +6,11 @@
   <link href="{{url_for('static', filename='assets/css/bootstrap.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='assets/css/bootstrap-responsive.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='custom/custom.css')}}" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Oxygen|Sintony" rel="stylesheet" type="text/css">
   {% block style %}{% endblock %}
 </head>
 <body>
   <div class="navbar navbar-fixed-top">
-    <h1 class="primary_title">Calvin<br>Belden</h1>
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -22,8 +22,8 @@
         <div class="nav-collapse">
           <ul class="nav">
             <li class={%block home_nav%}{%endblock%}><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
-            <li class={%block about_nav%}{%endblock%}><a href="/about">who i am</a></li>
-            <li class={%block projects_nav%}{%endblock%}><a href="/projects">what i do</a></li>
+            <li class={%block about_nav%}{%endblock%}><a href="/about">who I am</a></li>
+            <li class={%block projects_nav%}{%endblock%}><a href="/projects">what I do</a></li>
             <li class={%block contact_nav%}{%endblock%}><a href="/contact">contact</a></li>
             <li class={%block about_site_nav%}{%endblock%}><a href="/about_site">about this site</a></li>
             {%block pnf_nav%}{%endblock%}
@@ -36,13 +36,13 @@
     </div><!-- /.navbar-inner -->
   </div><!-- /.navbar -->
   <div id='content'>
-    <div class='span8 offset2 main'>
+    <div class='span6 offset3 main'>
       <div class='message'>
         {% block title %}{% endblock %}
         {% block content %}{% endblock %}
       </div> <!-- /.message -->
     </div> <!-- /.main /.span9 /.offset3 -->
-    <div class="span3 sidebar">
+    <div class="span3 sidebar-nav">
     {% block sidebar %}{% endblock %}
     <div>
   </div> <!-- /.content -->
