--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -9,13 +9,13 @@
 {% endblock %}
 
 {% block title %}
-    <h2>Boy am I glad you're here!</h2>
+    <h2>Welcome to the site!</h2>
 {% endblock %}
 
 {% block content %}
     <p>
         My name is Calvin Belden, and you've stumbled upon my latest side project.  Feel free to take in the sights
-        and peruse the bounty of personal information, and don't forget to stop by the gift shop on your way out.
+        and peruse my personal information, and don't forget to stop by the gift shop on your way out.
     </p>
     <!-- TODO: want to make the spoiler alert message invisible, then visible by hovering -->
     <p>
