--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block title %}
-    <h2>Welcome to the site!</h2>
+    <h2>Welcome.</h2>
 {% endblock %}
 
 {% block content %}
-    <h3>I'm glad you stopped by</h3>
+    <h3>I'm glad you stopped by!</h3>
     <p>
         My name is Calvin Belden, and you've stumbled upon my latest side project.  Feel free to take in the sights
         and peruse my personal information, and don't forget to stop by the gift shop on your way out.
