--- a/mysite/static/custom/custom.css
+++ b/mysite/static/custom/custom.css
@@ -12,19 +12,16 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#48b500', endColorstr='#114900',GradientType=0 ); /* IE6-9 */
 }
 
-/* standard navbar button*/
-.navbar .nav > li > a {
-    color: rgb(255, 255, 255);
-    text-shadow: none;
-    border-right: 1px solid rgb(107, 158, 113);
-    border-radius: 4px;
+.navbar-inner{
+  border: none;
 }
 
-/* Active navbar button */
-.navbar .nav > .active > a{
+/* standard navbar button*/
+.navbar .nav > li > a {
     color: white;
-    background-color: rgb(65, 167, 56);
     text-shadow: none;
+    border-right: 1px solid rgb(107, 158, 113);
+    border-radius: 2px;
 }
 
 /* navbar hover */
@@ -33,8 +30,8 @@
     background-color: rgb(65, 167, 56)
 }
 
-/* navbar active hover */
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover {
+/* navbar active and active hover */
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover  {
     color: white;
     background-color: rgb(65, 167, 56)
 }
@@ -65,27 +62,35 @@
 body {
     padding-top: 30px;
     color: white;
-    background-image: url("tweed.png");
+/*    background-image: url("italy.jpeg");
+    background-position: 60% 15%;*/
+    background-image: url("train.jpg");
+    background-position: 60% 15%;
 }
 
 /* Background image for the message text; need to find something better. */
 .main {
-    background-color: rgb(83, 83, 83);
+    background-color: rgb(41, 40, 40);
     /* TODO: would like to change the background opacity but keep text dark */
     font-size: 125%;
     line-height: 1.2em;
     overflow: scroll;
-    padding: 1em 1em 0 1em;
-    border-radius: 8px;
-    box-shadow: 3px 3px 10px 3px rgb(58, 58, 58);
+    padding: 0 1em .5em 1em;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px 2px rgb(44, 44, 44);
+    opacity: 0.8;
     margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+h3 {
+  letter-spacing: .05em;
 }
 
 /* Increase spacing between paragraphs */
 .message > p {
     margin-bottom: 1em;
-    /*font-family: Oxygen;*/
-    /* TODO: make #spoiler text invisible until rollover */
+    font-family: Oxygen;
 }
 
 .main a {
