--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -9,19 +9,16 @@
 {% endblock %}
 
 {% block title %}
-    <h2> About me </h2>
+    <h2>Who I am.</h2>
 {% endblock %}
 
 {% block content %}
     <h3>The Low Down</h3>
     <p>
-        As you may have already guessed, I'm Calvin Belden: student, son, brother, friend, acquaintance, innovator, loyal confidant, and (to some) arch nemesis.
-    </p>
-    <p>
         I am a senior Electrical Engineering student at the University of Notre Dame, though I've been able to beef up on my Computer Science skills via coursework, internships, and personal investigation.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a>.
     </p>
     <p>
-        When I'm not working, studying, reading, or tinkering, you can find me out on the golf course shanking golf
-        balls into beverage carts.  You might also catch me flailing in a nearby lake (there are >10,000 to choose from).
+        When I'm not working, studying, reading, or tinkering, you can find me on the golf course shanking
+        balls into beverage carts.  It's also likely you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain">Fun Fact</a>: There are more than 11,000 to choose from).
     </p>
 {% endblock %}
