edited some of the content: grammar fixes

--- a/mysite/templates/about_site.html
+++ b/mysite/templates/about_site.html
@@ -15,17 +15,17 @@
 {% block content %}
     <h3>The Tools</h3>
     <p>
-        This site is run using the Python web framework, <a href="flask.pocoo.org">Flask</a>.  Flask is a lightweight framework built to get web apps up and running quickly.  It's great for a simple expose, like this one, but I've been told that it can be difficult (but not impossible) to scale for production purposes.
+        This site was built using the Python web framework, <a href="flask.pocoo.org">Flask</a>.  Flask is a lightweight framework built to get web apps up and running quickly.  It's great for a simple expose, like this one, but I've been told that it can be difficult (but not impossible) to scale for production purposes.
     </p>
     <p>
-        All of the pages found here are rendered using Jinja2 templates, which I have found to be incredibly easy to use.  This site is hosted on Heroku with their free tier (which has been great!).
+        All of the pages found here are rendered using Jinja2 templates, which I have found to be incredibly easy to use.  This site is hosted on <a href="heroku.com">Heroku</a> using their free tier (which has been great!).
     </p>
     <p>
-        The source for this website will be available soon!
+        Stay Tuned: The source for this website will be available soon!
     </p>
 
     <h3>Photo Credit</h3>
     <p>
-        I discovered the background image (used on every page) from a reddit post, and it was originally posted by josefontheroad on Flickr.  A link to the original photo is <a href="http://www.flickr.com/photos/18583713@N06/7726632314/">here</a>.  What a great shot!
+        I discovered the background image (used on every page) from a reddit post, although it was originally uploaded online by josefontheroad on Flickr.  A link to the original photo is <a href="http://www.flickr.com/photos/18583713@N06/7726632314/">here</a>.  What a great shot!
     </p>
 {% endblock %}
