--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -13,12 +13,13 @@
 {% endblock %}
 
 {% block content %}
-    <h3>The Low Down</h3>
+    <h3>Business up front</h3>
     <p>
-        I am a senior Electrical Engineering student at the University of Notre Dame, though I've been able to beef up on my Computer Science skills via coursework, internships, and personal investigation.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a>.
+        I am a senior Electrical Engineering student at the University of Notre Dame, though my electives and free time have been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/about">about</a> page to look at my technical experience!
     </p>
+    <h3>Recreation</h3>
     <p>
         When I'm not working, studying, reading, or tinkering, you can find me on the golf course shanking
-        balls into beverage carts.  It's also likely you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain">Fun Fact</a>: There are more than 11,000 to choose from).
+        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
     </p>
 {% endblock %}
