--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <h3>I'm glad you stopped by!</h3>
+    <h3>Thanks for stopping by!</h3>
     <p>
         My name is Calvin Belden, and you've stumbled upon my latest side project.  Feel free to take in the sights
         and peruse my personal information, and don't forget to stop by the gift shop on your way out.
