--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Business up front</h3>
+    <h3>Business</h3>
     <p>
         I am a senior Electrical Engineering student at the University of Notre Dame, though my electives and free time have been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
     </p>
