--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="A fantastic review covering the limited life works of Calvin Belden, an Electrical Engineering student and Software Engineer at the University of Notre Dame.">
+  <meta name="keywords" content="calvin, belden, electrical, computer science, computer, electrical engineer, software engineer, software, developer, programmer, funny, guy, dude, man, brother, friend, university, notre dame">
   <title>{% block pagetitle %}Cal Belden - Welcome{% endblock %}</title>
   <link href="{{url_for('static', filename='assets/css/bootstrap.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='assets/css/bootstrap-responsive.css')}}" rel="stylesheet">
@@ -36,7 +38,7 @@
     <div class='title-bar'>
       {% block title %}{% endblock %}
     </div> <!-- ./title-bar -->
-    <div class='span6 offset3 main'>
+    <div class='main span6 offset3'>
       <div class='message'>
         {% block content %}{% endblock %}
       </div> <!-- /.message -->
