--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -15,11 +15,6 @@
 {% block content %}
     <h3>Thanks for stopping by!</h3>
     <p>
-        My name is Calvin Belden, and you've stumbled upon my latest side project.  Feel free to take in the sights
-        and peruse my personal information, and don't forget to stop by the gift shop on your way out.
+        My name is Calvin Belden, and you've stumbled upon my latest project.  Feel free to explore my expose and leave a comment!
     </p>
-    <!-- TODO: want to make the spoiler alert message invisible, then visible by hovering -->
-    <p>
-        (SPOILER: there's no gift shop)
-    </p> 
 {% endblock %}
