--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -15,11 +15,11 @@
 {% block content %}
     <h3>Business</h3>
     <p>
-        I am a senior Electrical Engineering student at the University of Notre Dame, though my electives and free time have been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
+        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to Computer Science.  If you'd like, you can take a look at my resume <a href="{{url_for('static', filename='resume/resume.pdf')}}">here</a> or head to the <a href="/projects">projects</a> page to look at my technical experience!
     </p>
     <h3>Recreation</h3>
     <p>
         When I'm not working, studying, reading, or tinkering, you can find me on the golf course shanking
-        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
+        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch me flailing around in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
     </p>
 {% endblock %}
