--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -16,7 +16,7 @@
     <h3>MTS Systems Corporation</h3>
     <h4>Summer 2013</h4>
     <p>
-        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  Each of the test <a href="http://www.mts.com/mtscriterion/">frames</a> (primarily used for the materials industry) comes equipped with a rich Windows application, <a href="http://www.mts.com/testsuite/">TestSuite</a>.
+        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  Each of the test <a href="http://www.mts.com/mtscriterion/" target="_blank">frames</a> (primarily used for the materials industry) comes equipped with a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>.
     </p>
     <p>
         I was part of an automated test team, and I spent the summer implementing UI drivers and writing automated UI test cases for TestSuite.  It was rewarding converting time intensive manual quality tests into automated processes that could be run every night (versus crammed at the end of every release!).
@@ -25,7 +25,7 @@
     <h3>Gentex Corporation</h3>
     <h4>Summer 2012</h4>
     <p>
-        During the summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I primarily worked on the firmware (written in C) developing commands to exercise the mirror's functionality (controlling automatic dimming, rear view displays, GPS, compass, etc.).  At the end of the summer, I wrote integration tests in Ruby to exercise the firmware.
+        During the summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I primarily worked on the firmware (written in C) developing commands to exercise the mirror's functionality (controlling automatic dimming, rear view displays, GPS, compass, etc.).  At the end of the summer, I wrote integration tests in Ruby to exercise the firmware.
     </p>
 
     <h3>calbelden.com</h3>
