--- a/mysite/static/custom/custom.css
+++ b/mysite/static/custom/custom.css
@@ -1,15 +1,13 @@
 /* General navbar-inner (part with buttons) */
 .navbar-inner {
-    padding-left: 1em;
-    /* colorzilla generated gradient */
-    background: #48b500; /* Old browsers */
-    background: -moz-linear-gradient(top, #48b500 0%, #006e2e 39%, #114900 86%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#48b500), color-stop(39%,#006e2e), color-stop(86%,#114900)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #48b500 0%,#006e2e 39%,#114900 86%); /* IE10+ */
-    background: linear-gradient(to bottom, #48b500 0%,#006e2e 39%,#114900 86%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#48b500', endColorstr='#114900',GradientType=0 ); /* IE6-9 */
+background: #006e2e; /* Old browsers */
+background: -moz-linear-gradient(top, #006e2e 0%, #006e2e 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#006e2e), color-stop(100%,#006e2e)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #006e2e 0%,#006e2e 100%); /* IE10+ */
+background: linear-gradient(to bottom, #006e2e 0%,#006e2e 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#006e2e', endColorstr='#006e2e',GradientType=0 ); /* IE6-9 */
 }
 
 .navbar-inner{
@@ -56,43 +54,109 @@ body {
     padding-top: 30px;
     color: white;
     background-image: url("italy.jpeg");
-    background-position: 0% 25%;
+    background-position: 40% 40%;
     background-attachment: fixed;
 }
 
+/* Styling for primary page title */
 .title-bar {
     font-size: 150%;
+    margin-bottom: 20px;
     text-align: left;
-    padding: .3em 0 .05em 2em;
-    background-color: rgb(50, 155, 0);
+    padding: 4px 0 0 15px;
+    background-color: rgb(78, 197, 21);
     color: white;
 }
 
-/* Box for message */
-.main {
-    background-color: rgb(19, 19, 19);
-    border-radius: 2px;
-    box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
-    opacity: 0.9;
-    margin-top: 5%;
-    margin-bottom: 5%;
+/**/
+.gutter {
+  width: 15%;
+  float: left;
+  height: 1px;
 }
 
-/* Increase spacing between paragraphs */
-.message {
-    padding: 5% 7% 5% 7%;
-    margin-bottom: 1em;
+/* Box that contains main page content */
+.main-container {
+    /* positioning */
+    width: 46%;
+    float: left;
+    margin-bottom: 100px;
+
+    /* appearance */
+    background-color: rgb(19, 19, 19);
+    opacity: .7;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
+    padding-bottom: 10px;
+}
+
+/* sidebar stuff!*/
+.sidebar {
+    /* positioning */
+    width: 26%;
+    margin-left: 67%;
+    float: left;
+    margin-bottom: 10px;
+    position: fixed;
+
+    /* appearance */
+    background-color: rgb(19, 19, 19);
+    opacity: .7;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px 2px rgb(30, 30, 30);
+}
+
+.nav-header {
     font-family: Oxygen;
+    color: white;
+    font-size: 150%;
+    text-shadow: none;
+}
+
+.nav-list > li > a {
+    font-family: Oxygen;
+    font-size: 120%;
+    text-shadow: none;
+}
+
+img {
+    border-radius:0.5em;
+    box-shadow: 0px 0px 0.5em #000000;
+    max-width: 100%;
+}
+
+.photo-container {
+   width : 90%;
+   float: left;
+}
+
+.photo-gutter {
+  width: 5%;
+  float: left;
+  height: 1px;
+}
+
+p {
     font-size: 130%;
     line-height: 1.3em;
 }
 
 h3 {
-  letter-spacing: .05em;
+    margin-top: 0;
+    padding-top: 15px;
 }
 
-.main a {
-  color: rgb(65, 221, 59);
+/* Text positioning */
+h3, h4, p {
+    font-family: Oxygen;
+    color: white;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+/* link color */
+a {
+    color: rgb(65, 221, 59);
 }
 
 
