finally added contact form (but have not supported it yet). tweakted ui. made background image stretch to screen: still having image height issues if viewport gets too skinny

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -36,6 +36,10 @@
     </div><!-- /.navbar-inner -->
   </div><!-- /.navbar -->
 
+  <div class="background-image">
+    <img src="{{url_for('static', filename='custom/italy.jpeg')}}" alt="Background image of an Italian island.">
+  </div>
+
   <!-- TITLE BAR -->
   <div class='title-bar'>
     {% block title %}{% endblock %}
