--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -4,6 +4,10 @@
     Cal Belden - Projects
 {% endblock %}
 
+{% block style %}
+    
+{% endblock %}
+
 {% block projects_nav %}
     "active"
 {% endblock %}
@@ -14,24 +18,27 @@
 
 {% block content %}
     <h3 id="mts" style="padding-top: 40px; margin-top: -40px;">MTS Systems Corporation</h3>
-    <h4>Summer 2013</h4>
+    <h4>Languages: C#</h4>
     <p>
-        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  Many of the test frames come equipped with a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>.
+        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries.  MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
     </p>
     <p>
-        I was part of the automated test team at MTS, and I spent the summer implementing UI drivers and writing automated UI test cases (in C#) for TestSuite.  It was rewarding converting time intensive manual tests into automated processes that could be run every night (versus crammed in at the end of every release!).
+        I was a member the automated test team that worked with TestSuite, and I spent the summer implementing UI drivers and writing UI test cases in C#.  It was rewarding converting tedious manual tests into automated processes that could be run every night (vs. at the end of every release!).
     </p>
 
     <h3 id="gentex" style="padding-top: 40px; margin-top: -40px;">Gentex Corporation</h3>
-    <h4>Summer 2012</h4>
+    <h4>Languages: C, Ruby</h4>
     <p>
-        During the summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I primarily worked on the firmware (written in C) developing commands to exercise the mirror's functionality (controlling automatic dimming, rear view displays, GPS, compass, etc.).  At the end of the summer, I wrote integration tests in Ruby which exercised various components of the firmware.
+        The summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and I wrote commands to retrieve and send diagnostic information to and from the mirror.
+    </p>
+    <p>
+        One common task was retrieving and writing data stored in the mirror's EEPROM.  I also wrote integration tests to ensure that the mirror was performing appropriately (correctly dimming, displaying accurate compass readings, displaying accurate GPS information, etc.).
     </p>
 
     <h3 id="this_site" style="padding-top: 40px; margin-top: -40px;">calbelden.com</h3>
-    <h4>Summer 2013</h4>
+    <h4>Languages - HTML, CSS, Python</h4>
     <p>
-        I started working on this website earlier this summer to learn html and css and to keepy my Python skills fresh.  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants (student owned/runned).  I plan on making more progress on the food app later this fall!
+        I began calbelden.com earlier this summer to learn html and css; I also saw this as an opportunity to keep my Python skills fresh!  My hope is to use the knowledge I've learned here and apply it to a food ordering web-app geared towards Notre Dame's dorm restaurants, which are all student owned/runned).
     </p>
 {% endblock %}
 
