--- a/mysite/templates/about_site.html
+++ b/mysite/templates/about_site.html
@@ -15,10 +15,10 @@
 {% block content %}
     <h3>The Tools</h3>
     <p>
-        This site was built using the Python web framework, <a href="http://flask.pocoo.org" target="_blank">Flask</a>.  Flask is a lightweight framework built to get web apps up and running quickly.
+        This site was built using <a href="http://flask.pocoo.org" target="_blank">Flask</a>.  Flask is a lightweight framework built to get Python web apps up and running quickly.
     </p>
     <p>
-        All of the pages on this site are rendered using <a href="http://jinja.pocoo.org/docs/" target="_blank">Jinja2</a> templates and the <a href="http://twitter.github.io/bootstrap/" target="_blank">Twitter Boostrap</a> toolkit, which have both been incredibly easy to use!  This site is hosted on <a href="http://heroku.com" target="_blank">Heroku</a> using their free tier (which has been great!).
+        All of the pages on this site are rendered using <a href="http://jinja.pocoo.org/docs/" target="_blank">Jinja2</a> templates and the <a href="http://twitter.github.io/bootstrap/" target="_blank">Twitter Boostrap</a> toolkit, which have both been really easy to use.  This site is hosted on <a href="http://heroku.com" target="_blank">Heroku</a> using their free tier (which has been great!).
     </p>
     <p>
         Stay Tuned: The source for this website will be available soon!
